# fastAPI

./: main.py  pyproject.toml
