[tool.poetry]
name = "'one'"
version = "0.1.0"
description = ""
authors = ["Коваленко Алексей <kovalenkoalex20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
